--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile "org.apache.commons:commons-collections4:4.4"
     compile "org.projectlombok:lombok:1.18.10"
     annotationProcessor "org.projectlombok:lombok:1.18.10"
+    compile "log4j:log4j:1.2.17"
 
     // Database
     compile "postgresql:postgresql:8.4-702.jdbc4"
