--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,18 @@
-apply plugin: 'java'
-apply plugin: 'java-library'
+plugins {
+    id 'org.springframework.boot' version '2.3.4.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+    id 'java'
+}
+
+group = 'gmail.ivandmitirev'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '11'
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
 
 repositories {
     mavenCentral()
@@ -11,31 +24,23 @@ jar {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    compileOnly 'org.projectlombok:lombok'
+    runtimeOnly 'org.postgresql:postgresql'
+    annotationProcessor 'org.projectlombok:lombok'
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
+    testImplementation 'org.springframework.security:spring-security-test'
 
-    // Libraries
     compile "org.apache.commons:commons-lang3:3.10"
     compile "org.apache.commons:commons-collections4:4.4"
-    compile "org.projectlombok:lombok:1.18.10"
-    annotationProcessor "org.projectlombok:lombok:1.18.10"
     compile "log4j:log4j:1.2.17"
-
-    // Database
-    compile "postgresql:postgresql:8.4-702.jdbc4"
-    compile "org.hibernate:hibernate-core:5.4.7.Final"
 
     // Bean validation
     compile "javax.validation:validation-api:2.0.1.Final"
-
-    // Spring
-    compile "org.springframework:spring-core:5.2.2.RELEASE"
-    compile "org.springframework.data:spring-data-jpa:2.2.6.RELEASE"
-
-    // Tests
-    testCompile "org.junit.jupiter:junit-jupiter-engine:5.6.2"
-    testCompile "org.springframework:spring-test:5.2.2.RELEASE"
-    testCompile "org.assertj:assertj-core:3.16.1"
-    testCompile "org.mockito:mockito-core:3.5.13"
-    implementation 'org.mockito:mockito-junit-jupiter:3.5.13'
 }
 
 compileJava {
