--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,10 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/openjdk:11.0.8-jdk
+      - image: circleci/postgres:9.6-alpine
+          environment:
+            POSTGRES_USER: circleci-demo-go
+            POSTGRES_DB: circle_test
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
