add Swagger 2 to Thymeleaf controllers

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,10 @@ dependencies {
 
     // Bean validation
     compile "javax.validation:validation-api:2.0.1.Final"
+
+    // Swagger
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
 }
 
 compileJava {
